# Electronic-Gossip.

./: .gitignore  CHANGELOG.md  Makefile  README.md  bagua.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
bagua/: __init__.py  __main__.py  character.py  cli.py  divination.py  gui.py  gui_app.py  gui_display.py  gui_forms.py  gui_method_help.py  gui_settings.py  headless.py  locations.py  lunar_util.py  models.py  prompt.py  service.py  timezone.py  true_solar.py  user_prefs.py
bagua/divination/: __init__.py  coin.py  common.py  manual.py  number.py  random.py  registry.py  time.py
docs/: CLEANUP.txt  DIVINATION_METHODS_PLAN.md  PROJECT_STATUS.md  WINDOWS_INSTALL.md  WORKFLOW.txt
scripts/: cleanup.ps1  setup.ps1
tests/: test_config.py  test_divination.py  test_divination_registry.py  test_gui_display.py  test_headless.py  test_hexagram.py  test_lunar_util.py  test_service.py  test_solar_term.py  test_timezone.py  test_true_solar.py  test_yao_texts.py
