[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bagua"
version = "0.4.0"
description = "极简易经八卦占卜 CLI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "rich>=13.0.0",
    "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
bagua = "bagua.cli:main"
bagua-gui = "bagua.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bagua*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]