[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bagua"
version = "1.0.0"
description = "极简易经八卦占卜 CLI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "rich>=13.0.0",
    "lunar-python>=1.3.0",
    "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
bagua = "bagua.cli:main"
bagua-gui = "bagua.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bagua*"]

[tool.setuptools.package-data]
bagua = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["bagua", "tests", "scripts"]

[tool.ruff.lint]
select = ["F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "bagua.divination",
    "bagua.hexagram",
    "bagua.cli",
    "bagua.headless",
    "bagua.bazi",
    "bagua.lunar_util",
]
ignore_errors = true